unpackaged/objects/copado__Selenium_Locator__c.object
<CustomObject>
	<fields>
		<fullName>copado__External_ID__c</fullName>
		<description>MD5 of Page + Locator</description>
		<externalId>true</externalId>
		<label>External ID</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Locator_ID__c</fullName>
		<externalId>true</externalId>
		<inlineHelpText>This value is user defined. When setting a Locator ID then this can be use on Selenium Test Cases scripts as {!Locator.ID} e.g.: {!Locator.ACCOUNT_SAVE_BUTTON}</inlineHelpText>
		<label>Locator ID</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Locator__c</fullName>
		<inlineHelpText>Selenium locator that identifies the element on the page.</inlineHelpText>
		<label>Locator</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Page__c</fullName>
		<inlineHelpText>Used to give context for the locator. It can be any text.
Copado Recorder will automatically set the page title when recording.</inlineHelpText>
		<label>Page</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<label>Selenium Locator</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Page__c</columns>
		<columns>copado__Locator__c</columns>
		<columns>copado__Locator_ID__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>SL-{00000}</displayFormat>
		<label>Selenium Locator Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Selenium Locators</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>